# Weather-RAG

./: .dockerignore  .env.example  Dockerfile  README.md  agent.py  app.py  commands.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/agent/: __init__.py  weather_agent.py
src/api/: app.py  dependencies.py  main.py  schemas.py  tracing_logger.py
src/api/routes/: __init__.py  base_route.py  chat.py
src/api/routes/module/: __init__.py  schema.py
src/chunker/: __init__.py  first_pdf_chuncker.py  second_pdf_chuncker.py
src/data/out_chunks/: raw_01.txt  raw_02.txt  weather_database.bullets.jsonl  weather_global_guide.structured.jsonl
src/extract_text/: extract.py
src/prompts/: __init__.py  system_prompt.py
src/rag/: __init__.py  builder.py  ingest.py
src/schema/: __init__.py  internet_search_schema.py  weather_query_schema.py
src/tools/: __init__.py  dummy_weather.py  search.py  weather.py
src/utils/: ddg.py  metrics.py  parsing.py  source_parsers.py  sse.py  telemetry.py
