[project]
name = "weather-chatbot-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cassandra-driver>=3.29.3",
    "cassio>=0.1.10",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.2",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.5",
    "langgraph-prebuilt>=1.0.5",
    "openweathermap>=0.1.4",
    "pyasyncore>=1.0.4",
    "pyowm>=3.5.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
